@@ -1,3 +1,7 @@
+2017-08-22  Will Schmidt  <will_schmidt@vnet.ibm.com>
+
+	* gcc.target/powerpc/fold-vec-sums-int.c: New.
+
 2017-08-22  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/81741
